feat: class, nature文章 feat: 路由, 返回, 关于, 滚动下一篇

--- a/articles/guide/3.declare.md
+++ b/articles/guide/3.declare.md
@@ -135,4 +135,4 @@ let o = {f:test};
 
 ## 结语
 
-以上就是Key语言中可以直接定义的所有基本类型. Key语言虽然不是强类型(脚本语言本身就没法做成强类型), 但原生支持相对高性能的class对于一个脚本语言来说绝对是雪中送炭. 下一篇我会说明Key语言的类如何定义.
+以上就是Key语言中可以直接定义的所有基本类型. 下一章会说明Key语言的哲学和设计(不是那种很难懂的, 恰恰相反, 我实现了比你已知的大部分编程语言还精致的语言架构), 想必会决定你对这门语言的好感. 
