--- a/articles/guide/2.declare.md
+++ b/articles/guide/2.declare.md
@@ -41,7 +41,7 @@ Int, Uint, Float都分别有parse的静态方法, 而且支持选择进制
 比如:
 
 ```
-Int::parse("-3") == -3
+Int::parse("-2F", 16) == -47
 ```
 
 不过这里的字符串不是语法上的解析, 不要加f,i,u这种类型后缀.
@@ -52,7 +52,7 @@ Int::parse("-3") == -3
 
 ```
 // 最常用的定义
-let f(a:Str,b:Uint) {
+let f(a:Str,b) {
   ...
 }
 // 定义空函数
@@ -71,12 +71,22 @@ let a() {
 }
 ```
 
+另外, Key的顶级作用域返回值时会直接返回为程序状态码:
+
+```
+// 顶级作用域
+:20
+// error: process didn't exit successfully: `...` (exit code: 20)
+```
+
 函数的字面量是`|参数|{内容}`. 以下写法等价
 
 ```
 let a(): 20;
 let a = ||: 20;
 ```
+
+### iife
 
 有的时候不想作用域污染, 你可以直接这样
 
@@ -97,7 +107,93 @@ let b = ||{
 }();
 ```
 
-函数定义时可以在参数后加上`:类型`, 在调用时动态检查传入类型是否一致.
+### 函数导出
+
+如果你希望写一个ks模块, 先记住以下写法:
+
+```
+mod 文件路径> 模块名
+```
+
+比如我当前cd在一个test文件夹(`cwd`), 里面有一个`module.ks`(要导入的模块)和一个`main.ks`(我要运行的ks文件)
+
+你需要使用`mod.`语句来导出函数, 使用`-.`表达式来读取模块中的函数.
+
+```
+// module.ks
+const i = 90;
+mod.func(): i;
+// 也可以写成
+mod.func = ||: i;
+```
+
+```
+// main.ks
+mod module.ks> my_mod;
+let i_from_mod = my_mod-.func(); // 90
+```
+
+### 定义类型
+
+函数定义时可以在参数后加上`:类型`, 在调用时动态检查传入类型是否一致:
+
+```
+let a = "";
+let f(n:Uint);
+f(a) // err: 参数类型不同
+```
+
+此处的类型只允许字符, 不允许`some_mod-:T`的写法. 不论定义了什么类型, uninit都可以成功通过, 因此你的代码可能仍需要判断参数是否为uninit. 
+
+其实你还可以使用`=`来设定默认参数.
+
+```
+let f(a:Int = 2) {
+  log(a)
+}
+f() // 2
+```
+
+当然, 不加类型也能用`=`. 
+
+```
+let f(a = "233") {
+  log(a)
+}
+f() // 233
+```
+
+### 宏
+
+Key语言有个别的脚本都没做过的功能, 就是改变函数作用域. 换句话说, 你的每个函数都可以当作一个宏来使用. 
+
+使用`call_here`:
+
+```
+let a;
+let b;
+let initer;
+{ // 模拟作用域变化
+  let a = 99;
+  let b = 32;
+  let f() {
+    a = 20;
+    b = 10;
+  }
+  initer = f;
+}
+
+// 两种情况下的a,b值
+initer(); // a == (), b == ();
+initer.call_here(()) // 第一个参数代表函数内的self, 传个uninit就行
+                     // a == 20, b == 10
+```
+
+改变作用域时如果函数带有默认参数, 由于函数的上下文变化, 默认参数的上下文也会跟着变化(如果你的默认参数写了变量之类的就会跟着变成现在的上下文的该变量)
+
+函数中的参数如果设定了自定义类型, 到了新作用域也会跟随新作用域的同名类型(没有同名类型就报错啦)
+
+其他方法请参见[`Func`方法](../primitives/func.md)
 
 ### Bool
 
