feat: 运算符, if, for文章

--- a/articles/guide/3.declare.md
+++ b/articles/guide/3.declare.md
@@ -60,6 +60,8 @@ let s = 6;
 
 字符串有2个常用属性: len和byte_len. 前者读取时会遍历一遍字符串, 可以获得精确的unicode字符数量; 后者直接读取字符串的内存长度. 这些属性不可修改.
 
+另外, 你也可以使用索引来获得字符串的第n个字符: `"原神启动"[1] == "神"`
+
 ## 列表
 
 列表(List)是Key语言中的不定类型的储存类型.
@@ -72,6 +74,8 @@ let a = List::from_iter(10); // [0,1,2,3,4,5,6,7,8,9]
 ```
 
 列表最常用的方法是push和remove,详见[list api](../primitives/list.md). 
+
+列表也可以使用索引: `[1,2][1] == 2`
 
 列表有一个属性'len', 只读, 可以获取其长度.
 
@@ -90,6 +94,8 @@ let b = 'aacc{ / 使用大括号来换行和输入十六进制
 ```
 
 我为数组实现的方法超级多(肝痛), 有兴趣可以去读一读. 最重要的方法还是read, read_float和write.
+
+数组的索引得到的都是Uint类型. 
 
 ## 对象
 
