--- a/articles/guide/4.nature.md
+++ b/articles/guide/4.nature.md
@@ -100,6 +100,8 @@ Key语言使用 我称之为`outlive`的算法, 虽然没啥论文支持, 但这
 
 初学者来说这一篇读完你只需要记住赋值就是复制就好了, 传参数时 因为函数内会自动帮你 把参数名的变量(形参)定义成传的实际参数(实参), 这个过程也属于赋值, 所以也有复制的行为存在. 
 
+值得注意的是, 复制函数的行为其实并没有多大开销, 只是复制了函数的指针, 所以不要对函数的复制有负罪感. 
+
 总的来讲, Key语言通过最简单的方式实现了最好理解, 最方便, 原则上性能最好的架构, 希望我的努力能让你对编程这件事本身有所改观. 
 
 Key语言虽然不是强类型(脚本语言本身就没法做成强类型), 但原生支持相对高性能的class对于一个脚本语言来说绝对是雪中送炭. 下一篇我会说明Key语言的类如何定义.
