--- a/articles/guide/5.class.md
+++ b/articles/guide/5.class.md
@@ -1,4 +1,4 @@
-# class
+# 类型声明
 
 ## 类的底层设计
 
@@ -110,7 +110,7 @@ log(direct.test(), new.test())
 3. `> .method()`和`.method()`的区别在于模块外能否调用该类型的实例的此方法(无关乎`1.`)
 4. `> static()`和`static()`的区别是, 在`1.`满足public时, 模块外在持有该类型时能否调用此静态方法
 
-不用去刻意记忆或区分这些概念, 作为初学者需要记忆的只是: 一个实例即使没有导出到模块外, 实例也可以调用自己类型的方法. 比如:
+不用去刻意记忆或区分这些概念, 作为初学者需要记忆的只是: 一个类型即使没有导出到模块外, 其实例也可以调用自己类型的方法. 比如:
 
 ```
 // module.ks
@@ -163,3 +163,64 @@ self = {};
 不过self如果你不管它,它就只是个uninit. 
 
 self只有在实例方法和call手动绑定这两种情况会改变. 不像js, Key中的self和Obj完全没有关系. 
+
+## is
+
+Key语言使用`is`运算符来判断类型. 
+
+```
+// module.ks
+mod:A{} // 声明一个A类型
+mod.a(): A::{}; // 导出一个能创建A实例的函数
+```
+
+```
+// main.ks
+mod module.ks> m;
+let a = m-.a();
+log(a is m-:A); // ture
+```
+
+对基本类型也有效: `"233" is Str == true`
+
+## 索引
+
+class可以定义`.@index_get`和`.@index_set`实例方法来捕获索引的使用(在一开始我说过的, `@`也是合法的标识符, 尽情使用)
+
+```
+class MyVec {
+  a:Buf
+  .@index_get(i): self.a[i].sqrt(), // 别忘了逗号, 此处在读取数值时得到的是其平方
+  .@index_set(i, v) {
+    self.a[i] = v;
+  }
+}
+let a = MyVec::{a:'233'};
+a[2] = 3; // 调用index_set
+log(a); // MyVec { a: Buf[32, 33, 9]  }
+log(a[2]) // 调用index_get得到9
+```
+
+需要注意的是, @index_set虽然是方法, 但如果数据是常量也会被阻止使用. 
+
+```
+const a = MyVec::{a:'成常量了?'};
+a[1] = 9; // 报错: 无法写入常量
+```
+
+## 析构函数
+
+你甚至可以在脚本语言里使用析构函数. (初学者无需掌握)
+
+为你的类定义`.@clone`和`.@drop`来调用复制和析构函数. 由于脚本语言直接操作内存和指针是非常不安全的行为, 原则上这两个函数的实用性或许只来源于对原生模块函数的转接. 
+
+```
+let a = 0
+class Rc {
+  .@clone() {
+    a+=1;
+    :Rc::{} // 都说是复制了, 你总得返回一个同类型的值
+  },
+  .@drop() a-=1
+}
+```
