--- a/articles/guide/1.start.md
+++ b/articles/guide/1.start.md
@@ -8,13 +8,13 @@ log("hello world!")
 
 Key语言的全局函数非常少, 只有这几个
 
-- log (就是print)
-- throw (手动报错)
-- run_ks (在当前作用域运行字符串,无返回值但可以直接和当前作用域交互)
-- version (获取Key编译器版本)
-- distribution (为了区分魔改版, 该函数返回"Subkey"字符串, 可以在自己的fork版本写自己的名字)
-- swap (交换两个变量)
-- take (取走一个变量的值, 使其变成uninit)
+- `log` (就是`print`)
+- `throw` (手动报错)
+- `run_ks` (在当前作用域运行字符串,无返回值但可以直接和当前作用域交互)
+- `version` (获取Key编译器版本)
+- `distribution` (为了区分魔改版, 该函数返回`"Subkey"`字符串, 可以在自己的fork版本写自己的名字)
+- `swap` (交换两个变量)
+- `take` (取走一个变量的值, 使其变成`uninit`)
 
 有个长得很像函数的语法`const(xx)`, 它不是函数, 可以传入一个变量名将其设置为常量.
 
