feat: 向上滚动翻页 feat: extern文章

--- a/articles/guide/1.start.md
+++ b/articles/guide/1.start.md
@@ -26,4 +26,4 @@ Key语言的全局函数非常少, 只有这几个
 
 以上全局函数无需特别记忆, 因为他们全都非常实用. 希望你能在实践中去想起他们的存在. 在之后的文章中也会说到这些函数的特别用法.
 
-另外, 该文档中你可以在一篇文章读完后继续向下滚动, 即可自动跳转到下一篇. 
+另外, 该文档中你可以在一篇文章读完后继续向下滚动, 即可自动跳转到下一篇. (上翻同理)
