--- a/articles/guide/2.declare.md
+++ b/articles/guide/2.declare.md
@@ -2,6 +2,8 @@
 
 在key中定义关键词只有两个: `let`和`const`. 对于变量, 我建议使用下划线+小写的标识符. 同时,`@`,`~`,`_`都是合法的标识符符号. `let some_times = ..;`这样的标识符是key语言和Rust语言都提倡的.
 
+别忘了你可以使用`~`命名, 像是:`what~can~i~say?`, 可读性还不错, 也可以把它当个前缀标识一种类型的变量. 
+
 另外, unicode字符全部都是合法的标识符(包括各语言的标点符号). 比如`let 原神 = "启动"`是合法的, 你也可以`let 😩 = 9`.
 
 ## const
@@ -34,7 +36,7 @@ b.c = 20; // 正常写入, a不受影响, b的属性被写入
 Key中有3中数字类型: `Uint`(正整数), `Int`(可以带负号的整数), `Float`(浮点数). 
 
 为什么分3种? 
-1. `Uint`的长度是你操作系统指针的长度, 虽然目前只支持64位, 但它可以当作指针的容器. 听不懂这些并不影响你学习Key语言.
+1. `Uint`的长度是你操作系统指针的长度, 它可以当作指针的容器. 听不懂这些并不影响你学习Key语言.
 2. `Int`和`Int`进行除法时会直接得到`Int`类型(向0方向取整), 比js的除法舒服多了.
 3. `| & ^`这种二进制操作符只允许`Uint`使用, 会直观很多
 4. 肉眼可见的性能优势就不细说了.
@@ -83,7 +85,7 @@ Int::parse("-2F", 16) == -47
 let f(a:Str,b) {
   ...
 }
-// 定义空函数
+// 定义空函数(分号是必须的, 否则会把下一句解析成其函数体)
 let f(a,b);
 // 定义直接返回的函数
 let f(): "好短好喜欢";
@@ -107,11 +109,18 @@ let a() {
 // error: process didn't exit successfully: `...` (exit code: 20)
 ```
 
-函数的字面量是`|参数|{内容}`. 以下写法等价
+函数的字面量是`|参数|内容`. 以下写法等价
 
 ```
 let a(): 20;
 let a = ||: 20;
+```
+
+另外, 函数调用允许留空参数:
+
+```
+let f(a,b,c,d,e) log(c);
+f(,,2,,); // 打印: 2
 ```
 
 ### iife
@@ -133,32 +142,6 @@ let b = ||{
   let a = 99;
   :a
 }();
-```
-
-### 函数导出
-
-如果你希望写一个ks模块, 先记住以下写法:
-
-```
-mod 文件路径> 模块名
-```
-
-比如我当前cd在一个test文件夹(`cwd`), 里面有一个`module.ks`(要导入的模块)和一个`main.ks`(我要运行的ks文件)
-
-你需要使用`mod.`语句来导出函数, 使用`-.`表达式来读取模块中的函数.
-
-```
-// module.ks
-const i = 90;
-mod.func(): i;
-// 也可以写成
-mod.func = ||: i;
-```
-
-```
-// main.ks
-mod module.ks> my_mod;
-let i_from_mod = my_mod-.func(); // 90
 ```
 
 ### 定义类型
@@ -211,7 +194,7 @@ let initer;
   initer = f;
 }
 
-// 两种情况下的a,b值
+// 两种情况下的最外层的a,b值
 initer(); // a == (), b == ();
 initer.call_here(()) // 第一个参数代表函数内的self, 传个uninit就行
                      // a == 20, b == 10
