--- a/articles/guide/5.class.md
+++ b/articles/guide/5.class.md
@@ -43,6 +43,26 @@ class A {
 
 方法中可以使用self关键字, 代表实例目前的值. 可以通过self来修改和读取实例值. 
 
+## self
+
+需要注意的是, `self = ..`的写法是有效的. 换句话说, `self = ..`的语法有可能直接改变self类型, 导致后续代码无法正常运行, 请避免此写法. 
+
+方法外的self目前只是代表最顶层作用域的一个变量, 用户可以自由使用. 作为关键词, `self`不会被let覆盖, 也就是说一个模块中任何没有绑定self的地方都能直接访问到该值, 有点用的使用方法是:
+
+```
+self = {};
+// ...
+{
+  self.some_prop = 20;
+  self.any_prop = 30;
+  // ...
+}
+```
+
+不过self如果你不管它,它就只是个uninit. 
+
+self只有在实例方法和call手动绑定这两种情况会改变. 不像js, Key中的self和Obj完全没有关系. 
+
 ## 静态方法
 
 静态方法就是一个普通函数, 但需要通过类调用. 静态方法和其他普通函数的self无意义.
@@ -64,7 +84,7 @@ let a = A::new(); // A {a:2,b:yes}
 log(a.get()) // 2
 ```
 
-值得注意的是, 实例方法也能通过`::`访问(和静态方法的命名不冲突, 静态方法优先), 此时你可以使用函数的`call`方法为此次调用绑定`self`(该绑定也会给予函数对这个值的写入权力). 如果不绑定`self`, 该函数就可能读写这个模块的`self`(见下文self章节).
+值得注意的是, 实例方法也能通过`::`访问(和静态方法的命名不冲突, 静态方法优先), 此时你可以使用函数的`call`方法为此次调用绑定`self`(该绑定也会给予函数对这个值的写入权力). 如果不绑定`self`, 该函数就可能读写这个模块的`self`.
 
 ```
 let test_obj = {a:233};
@@ -79,90 +99,6 @@ class A {
 }
 A::{} // 不会报错, 此时a,b,c都是uninit
 ```
-
-## 模块化
-
-Key语言使用`mod`关键词导出和导入class. 使用`mod:`语句导出类(对应函数`mod.`), 使用`-:`表达式使用模块中的类(对应函数的`-.`)
-
-假设我的cwd中有一个`module.ks`(作模块)和一个`main.ks`(运行用):
-
-```
-// module.ks
-mod:MyClass {
-  >a, // 使用>前缀表示模块外可直接读写此值(public)
-  >new(): MyClass::{a:3}, // public的静态方法
-  >.test(): self.a.sqrt() // public的实例方法(取数字的平方)
-}
-```
-
-```
-// main.ks
-mod module.ks> m; // 导入module.ks文件, 作为模块m
-class T = m-:MyClass; // 将T作为m模块的MyClass的别名
-let direct = T::{a:4}; // 直接构造该类型
-let new = T::new(); // 通过静态方法构造
-log(direct.test(), new.test())
-```
-
-各个部分的导出的实际意义: 
-1. `mod:T`和`class T`的区别在于模块外能否使用该类型来类型检查, 以及能否调用其静态方法
-2. `> prop`和`prop`的区别在于模块外能否对此属性直接进行读写, 模块外想创建一个此类型的实例必须保证`1.`的同时,所有值都是public`>`状态
-3. `> .method()`和`.method()`的区别在于模块外能否调用该类型的实例的此方法(无关乎`1.`)
-4. `> static()`和`static()`的区别是, 在`1.`满足public时, 模块外在持有该类型时能否调用此静态方法
-
-不用去刻意记忆或区分这些概念, 作为初学者需要记忆的只是: 一个类型即使没有导出到模块外, 其实例也可以调用自己类型的方法. 比如:
-
-```
-// module.ks
-class A {
-  a,b,
-  >.yes() log("看来能行")
-}
-mod.create_a(): A::{}; // 全部缺省
-```
-
-```
-// main.ks
-mod module.ks> m;
-m-.create_a().yes() // 打印: 看来能行
-```
-
-如果模块外想要构造模块内定义的类, 就必须保证所有的属性都是public:
-
-```
-// module.ks
-mod: A {
-  >a,>b
-}
-```
-
-```
-// main.ks
-mod module.ks> m;
-m-:A::{a:0,b:0} // 在模块外构造模块内定义的类型时不可省略任何属性
-```
-
-只要一个属性不是public, 模块外就因为无法访问该属性而无法构造该类型. 这个特点想必可以帮你减轻些模块内的属性值的判断压力. 
-
-## self
-
-需要注意的是, `self = ..`的写法是有效的. 换句话说, `self = ..`的语法有可能直接改变self类型, 导致后续代码无法正常运行, 请避免此写法. 
-
-方法外的self目前只是代表最顶层作用域的一个变量, 用户可以自由使用. 作为关键词, `self`不会被let覆盖, 也就是说一个模块中任何没有绑定self的地方都能直接访问到该值, 有点用的使用方法是:
-
-```
-self = {};
-// ...
-{
-  self.some_prop = 20;
-  self.any_prop = 30;
-  // ...
-}
-```
-
-不过self如果你不管它,它就只是个uninit. 
-
-self只有在实例方法和call手动绑定这两种情况会改变. 不像js, Key中的self和Obj完全没有关系. 
 
 ## is
 
@@ -224,3 +160,9 @@ class Rc {
   .@drop() a-=1
 }
 ```
+
+## 结语
+
+原生支持类型声明就是舒服对吧. 不仅如此, Key语言还支持模块化. 
+
+下一章将会说明模块的使用.
