--- a/articles/guide/7.ops.md
+++ b/articles/guide/7.ops.md
@@ -55,7 +55,7 @@ fn compare(left: &[u8], right: &[u8]) -> bool {
 }
 ```
 
-将`u8`替换为Key的值, 结论是一样的.
+将`u8`替换为Key语言中的值, 结论是一样的.
 
 比较大小算法:设两量为`a`和`b`
 
@@ -91,5 +91,41 @@ a+b |> () // ()是uninit, 意思是不做任何事情
   let a = 2;
   let b = 4;
   log( |%| ) // 代入到这么远的地方, 可以得到6
+}
+```
+
+## 结语
+
+这一篇是不是读着很有一种一边进一边出的感觉? 对于没有太多编程经验的人, 一次性不可能记住这么多运算符; 对编程老手来说这些又都司空见惯. 
+
+没关系, 文档就是用来参考的, 这一篇能为你脑海留下各种运算符的丝刻印象就已经足够了. 
+
+下一章会说明Key语言的流程控制语句`if`和`for`
+
+## 附录
+
+Rust中实现Key语言中使用的运算符优先级
+
+```rust
+pub const fn prec(x:&[u8])-> u8 {
+  match x {
+    b"-."|b"-:" => 16,
+    b"::"|b"." => 15,
+    b"("|b"[" => 14, // 代指调用和索引
+    // unary => 13
+    b"*" | b"%" | b"/" => 12, 
+    b"+" | b"-" => 11, 
+    b"<<"|b">>" => 10,
+    b"&" => 9,
+    b"^" => 8,
+    b"|" => 7,
+    b"=="|b"!="|b"<"|b">"|b"<="|b">=" => 6,
+    b"is"=> 5,
+    b"&&" => 4,
+    b"||" => 3,
+    b"="|b"+="|b"-="|b"*="|b"/="|b"%="|b"&="|b"|="|b"^="|b"<<="|b">>=" => 2,
+    b"|>" => 1, // 管道运算符应当最靠后计算
+    _=> 0
+  }
 }
 ```
