--- a/articles/guide/8.if_for.md
+++ b/articles/guide/8.if_for.md
@@ -261,3 +261,5 @@ Key语言中有一个没有字面量定义的基本类型: `Sym`, 代表`Symbol`
 
 迭代器无疑给语法设计上提供了很大的发挥空间, 但在迭代过程中你仍然有权限修改被迭代的值, 这种行为是未定义的. 
 
+至此, 主要的语法架构已经讲完了. 下一篇虽然也是语法介绍之一, 但恐怕实用性不算很强, 请作为番外篇进行对待. 
+
