feat: 换了一些icon trouble: const和take的存在是冲突的

--- a/articles/guide/4.nature.md
+++ b/articles/guide/4.nature.md
@@ -28,7 +28,7 @@ log(a,b);
 
 初学者注意, 以下讲的相对底层的东西你不需要掌握(对Key语言本身学习完全没影响). 我只希望下一次再见到这些底层非常常见的词汇时心中能多一丝印象. 
 
-Rust底层使用操作系统和汇编实现的memcpy和memmove函数进行简单的内存复制, 本身的实现和优化就很现代. 
+Rust底层使用操作系统和汇编实现的`memcpy`和`memmove`函数进行简单的内存复制, 本身的实现和优化就很现代. 
 
 另外, Key语言提供了`take`和`swap`函数. 如果你不想要复制, 而是直接把这个数据转移给别的变量的话, 就试试它们吧. 这两个函数只是简单的在栈上活动, 并没有内存复制(严格意义上栈上复制不也是复制么:笑)的开销. 
 
@@ -56,11 +56,11 @@ fetch_something(|_res|{
 
 初学者请看: 何为所有权? 简单说, 对于字符串, 你的变量本身持有的只是一个字符串的位置和长度这两个信息, 而字符串复制时会自动把 字符串位置处的内容 也复制一遍到其他位置, 然后新的变量拿到的是新的字符串的位置.
 
-take和swap函数则是出于 已知这个字符串在take前后都只有一个变量持有, 因此就干脆不复制字符串了, 只把字符串的位置和长度交给另一个变量, 这样达到的"性能提升"的效果.
+`take`和`swap`函数则是出于 已知这个字符串在`take`前后都只有一个变量持有, 因此就干脆不复制字符串了, 只把字符串的位置和长度交给另一个变量, 这样达到的"性能提升"的效果.
 
 ## 函数和方法
 
-为什么take能无视复制规则进行转移? 是因为内置所以有特权么? 
+为什么`take`能无视复制规则进行转移? 是因为内置所以有特权么? 
 
 其实是因为Key语言区分了Key模块`Key Module`和[原生模块](../native/readme.md)`Native Module`, 虽然Key语言内无法通过参数去改变传参者, 但原生模块的函数(由Rust编写)是可以直接获取其引用`Reference`的. 一是为了保护性能, 二是为了让原生能有对Key数据的更大操作空间. 
 
