--- a/articles/guide/3.declare.md
+++ b/articles/guide/3.declare.md
@@ -1,18 +1,18 @@
-## 定义类型 B
+# 基本类型
 
-Key语言中还有字符串(Str), 列表(List), 数组(真的是数字的组合, 叫作Buf), 对象(就是个哈希表,叫Obj). 
+Key语言中还有字符串(`Str`), 列表(`List`), 数组(真的是数字的组合, 叫作`Buf`), 对象(就是个哈希表,叫`Obj`). 
 
 本篇中有一些新定义的行为(其他脚本语言没有做过的事情), 希望初学者不要畏惧.
 
-### 字符串
+## `Str`
 
-Key中字符串(Str)有两种声明方式:
+Key中字符串(`Str`)有两种声明方式:
 
 1. Raw String
 
 (我该叫它`质符串`么..)
 
-使用双引号修饰的字符串所见即所得, 前提是你的代码编辑器必须使用UTF8编码进行输入. 
+使用双引号修饰的字符串所见即所得, 前提是你的代码编辑器必须使用`UTF-8`编码进行输入. 
 
 ```
 log("-\n\s\`\
@@ -56,15 +56,15 @@ let s = 6;
 "a" + s + "c" == "a6c"
 ```
 
-你也可以使用push方法修改字符串.
+你也可以使用`push`方法修改字符串.
 
-字符串有2个常用属性: len和byte_len. 前者读取时会遍历一遍字符串, 可以获得精确的unicode字符数量; 后者直接读取字符串的内存长度. 这些属性不可修改.
+字符串有2个常用属性: `len`和`byte_len`. 前者读取时会遍历一遍字符串, 可以获得精确的unicode字符数量; 后者直接读取字符串的内存长度. 这些属性不可修改.
 
 另外, 你也可以使用索引来获得字符串的第n个字符: `"原神启动"[1] == "神"`
 
 ## 列表
 
-列表(List)是Key语言中的不定类型的储存类型.
+列表(`List`)是Key语言中的不定类型的储存类型.
 
 列表使用方括号定义, 结尾可以有一个多余逗号, 但不可在任何槽位留空. 你或许需要用`()`代替空槽.
 
@@ -73,17 +73,17 @@ let a = [1,(),[233,"455"],]; // [1,uninit,[233,"455"]]
 let a = List::from_iter(10); // [0,1,2,3,4,5,6,7,8,9]
 ```
 
-列表最常用的方法是push和remove,详见[list api](../primitives/list.md). 
+列表最常用的方法是`push`和`remove`,详见[list api](../primitives/list.md). 
 
 列表也可以使用索引: `[1,2][1] == 2`
 
-列表有一个属性'len', 只读, 可以获取其长度.
+列表有一个属性`len`, 只读, 可以获取其长度.
 
 ## 数组
 
-数组(Buf)就是一片内存区域(`uint8_t[]`), 如果你确信它是一个正确的字符串, 可以使用buf.as_utf8直接转为Str.
+数组(`Buf`)就是一片内存区域(`uint8_t[]`), 如果你确信它是一个正确的字符串, 可以使用`buf.as_utf8`直接转为`Str`.
 
-数组的声明使用单引号, 支持16进制输入和注释. 大括号内的将被解析为对应的byte, 大括号外的将被直接作为utf8编码(你可以使用`log('中文')`直接去看一个中文的utf8编码哦)
+数组的声明使用单引号, 支持16进制输入和注释. 大括号内的将被解析为对应的byte, 大括号外的将被直接作为`utf8`编码(你可以使用`log('中文')`直接去看一个中文的utf8编码哦)
 
 ```
 let b = 'aacc{ / 使用大括号来换行和输入十六进制
@@ -93,13 +93,13 @@ let b = 'aacc{ / 使用大括号来换行和输入十六进制
 }';
 ```
 
-我为数组实现的方法超级多(肝痛), 有兴趣可以去读一读. 最重要的方法还是read, read_float和write.
+我为数组实现的方法超级多(肝痛), 有兴趣可以去读一读. 最重要的方法还是`read`, `read_float`和`write`.
 
-数组的索引得到的都是Uint类型. 
+数组的索引得到的都是`Uint`类型. 
 
 ## 对象
 
-万物皆对象? nonono, Key语言的对象(Obj)就是个臭哈希表. 对象的定义和使用和js几乎一样.
+万物皆对象? nonono, Key语言的对象(`Obj`)就是个臭哈希表. 对象的定义和使用和js几乎一样.
 
 ```
 let o = {}; // 空对象
@@ -113,9 +113,9 @@ let o = Obj::from_list([
 ]); //通过列表解析对象
 ```
 
-读取uninit的任何属性并不会报错(直接返回uninit),所以不用怕Obj读空值,更不用考虑可选链这种东西.
+读取`uninit`的任何属性并不会报错(直接返回`uninit`),所以不用怕`Obj`读空值,更不用考虑可选链这种东西.
 
-也可以直接为Obj插入本没有的值
+也可以直接为`Obj`插入本没有的值
 
 ```
 let o = {};
@@ -123,7 +123,7 @@ o.a = 20;
 // o == {a:20}
 ```
 
-想remove也很简单:
+想`remove`也很简单:
 
 ```
 let o = {a:20,b}; // 不写`:`就代表uninit
