feat: jmp按钮, 404页面 fix: loading和文章动画不同步的撕裂感

--- a/articles/guide/2.declare.md
+++ b/articles/guide/2.declare.md
@@ -2,7 +2,7 @@
 
 在key中定义关键词只有两个: `let`和`const`. 对于变量, 我建议使用下划线+小写的标识符. 同时,`@`,`~`,`_`都是合法的标识符符号. `let some_times = ..;`这样的标识符是key语言和Rust语言都提倡的.
 
-别忘了你可以使用`~`命名, 像是:`what~can~i~say?`, 可读性还不错, 也可以把它当个前缀标识一种类型的变量. 
+别忘了你可以使用`~`命名, 像是:`never~gonna~give~you-up`, 可读性还不错, 也可以把它当个前缀标识一种类型的变量. 
 
 另外, unicode字符全部都是合法的标识符(包括各语言的标点符号). 比如`let 原神 = "启动"`是合法的, 你也可以`let 😩 = 9`.
 
@@ -10,7 +10,9 @@
 
 你学过的`let`语法, 都可以直接套在`const`上. 另外, `const`支持`const( 变量名 )`的语法, 用来让一个变量变成常量. 
 
-常量的本身, 属性和索引都无法被赋值(仅仅是定义在赋值行为上, 其实能够修改数据的方法还是可以继续调用的). 
+事实上, "常量"本身只是个锁定的**标记**, 用于提醒自己这是不该更改的值. 作为脚本语言, 强制在底层区分可变和不可变是很麻烦且几乎没有正面收益的设计. 
+
+常量的本身, 属性和索引都无法被赋值(仅仅是定义在赋值行为上, 其实能够修改数据的方法还是可以继续调用的, 甚至`take`和`swap`都能对其生效. `take`和`swap`的作用参见<jmp to="/guide/4.nature">Key语言哲学</jmp>). 
 
 ```
 let a = { // 定义一个对象(和万物皆对象的对象不一样, 之后会讲)
@@ -59,7 +61,7 @@ Key中有3中数字类型: `Uint`(正整数), `Int`(可以带负号的整数), `
 30u .int == 30
 ```
 
-值得注意的是, 以上等号只是在说明他们类型相同. 实际上`1.0==1`也返回true.
+值得注意的是, 以上等号只是在说明他们类型相同. 实际上`1.0==1`也返回true (`int`和`float`运算自动同化成`float`进行对比)
 
 以下是数字的定义方法
 
@@ -99,7 +101,7 @@ let f(a,b);
 let f(): "好短好喜欢";
 ```
 
-需要注意的是, `:`是一个语句,是return的缩写.在任何地方你都可以使用`:`开头的语句直接返回,效果和return一样.
+需要注意的是, `:`是一个语句,是`return`的缩写.在任何地方你都可以使用`:`开头的语句直接返回,效果和`return`一样.
 
 以下写法是正确的
 
@@ -162,7 +164,7 @@ let f(n:Uint);
 f(a) // err: 参数类型不同
 ```
 
-此处的类型只允许字符, 不允许`some_mod-:T`的写法. 不论定义了什么类型, uninit都可以成功通过, 因此你的代码可能仍需要判断参数是否为uninit. 
+此处的类型只允许字符, 不允许`some_mod-:T`的写法. 不论定义了什么类型, `uninit`都可以成功通过, 因此你的代码可能仍需要判断参数是否为`uninit`. 
 
 其实你还可以使用`=`来设定默认参数.
 
