--- a/articles/guide/5.class.md
+++ b/articles/guide/5.class.md
@@ -84,13 +84,6 @@ let a = A::new(); // A {a:2,b:yes}
 log(a.get()) // 2
 ```
 
-值得注意的是, 实例方法也能通过`::`访问(和静态方法的命名不冲突, 静态方法优先), 此时你可以使用函数的`call`方法为此次调用绑定`self`(该绑定也会给予函数对这个值的写入权力). 如果不绑定`self`, 该函数就可能读写这个模块的`self`.
-
-```
-let test_obj = {a:233};
-log(A::get.call(test_obj)) // 233
-```
-
 如你所见, 在Key语言中没有new关键词, 而是通过`类型名::{}`的语法来声明一个新实例. 需要注意的是, 在**模块内**这样声明实例可以省略各个参数, 用uninit缺省:
 
 ```
@@ -98,6 +91,15 @@ class A {
   a,b,c
 }
 A::{} // 不会报错, 此时a,b,c都是uninit
+```
+
+之所以需要`A::{}`而不是`A {}`是因为Key语言并不强制分号, 第一行末尾是变量且第二行开头是`{`就会直接被解析成对象也是很不合理的. 
+
+值得注意的是, 实例方法也能通过`::`访问(和静态方法的命名不冲突, 静态方法优先), 此时你可以使用函数的`call`方法为此次调用绑定`self`(该绑定也会给予函数对这个值的写入权力). 如果不绑定`self`, 该函数就可能读写这个模块的`self`.
+
+```
+let test_obj = {a:233};
+log(A::get.call(test_obj)) // 233
 ```
 
 ## is
@@ -137,7 +139,7 @@ log(a); // MyVec { a: Buf[32, 33, 9]  }
 log(a[2]) // 调用index_get得到9
 ```
 
-需要注意的是, @index_set虽然是方法, 但如果数据是常量也会被阻止使用. 
+需要注意的是, `@index_set`虽然是方法, 但如果数据是常量也会被阻止使用. 
 
 ```
 const a = MyVec::{a:'成常量了?'};
