--- a/articles/native/1.start.md
+++ b/articles/native/1.start.md
@@ -16,10 +16,21 @@ crate-type = ["cdylib"]
 最后在`lib.rs`中这样写: 
 
 ```rust
+// prelude是预备的意思, 其中为你准备了最常用的部件
+// use ..::* 就是使用所有常用部件
 use key_native::prelude::*;
 
+// 如果你不懂编译原理的话, 只需要死记这条
+// 它相当于#[export_name = "main"]
+// 意思是在动态链接库中导出这个函数
+// 并命名为main供Key解释器调用
 #[no_mangle]
-fn main(m:&mut NativeModule) {
+// 该函数就是Key原生模块的主函数, 
+// 会在遇到mod xx> m的语句时直接被调用
+// NativeModule就是prelude中的一个部件
+// 代表的是Key为你创建了一个空模块, 而你会拿到其修改权
+// 该模块可以导出函数和类, 之后会说到
+fn main(_m:&mut NativeModule) {
   println!("okk");
 }
 ```
@@ -32,6 +43,10 @@ fn main(m:&mut NativeModule) {
 mod d:\code\rust\keytest\target\debug\keytestlib.dll> my_mod;
 ```
 
-用`key`命令运行这个脚本, 就能得到`okk`. 
+用`key`命令运行这个脚本, 就能看到打印`okk`. 
 
+## 报错
 
+需要注意的是, 希望用户使用`kpanic`替代`panic`, 因为`panic`在你的库中被调用时会在Key解释器中提示`某个线程错误`, 而`kpanic`就能正确打印错误信息和Key中的行号. 
+
+如果我们用了一些库, 当然不可能强求库中所有代码都改用`kpanic`, 
