--- a/articles/guide/2.declare.md
+++ b/articles/guide/2.declare.md
@@ -1,264 +1,144 @@
-# 定义语法
+# 基本类型
 
-在key中定义关键词只有两个: `let`和`const`. 对于变量, 我建议使用下划线+小写的标识符. 同时,`@`,`~`,`_`都是合法的标识符符号. `let some_times = ..;`这样的标识符是key语言和Rust语言都提倡的.
+Key语言中还有字符串(`Str`), 列表(`List`), 数组(真的是数字的组合, 叫作`Buf`), 对象(就是个哈希表,叫`Obj`). 
 
-别忘了你可以使用`~`命名, 像是:`never~gonna~give~you-up`, 可读性还不错, 也可以把它当个前缀标识一种类型的变量. 
+本篇中有一些新定义的行为(其他脚本语言没有做过的事情), 希望初学者不要畏惧.
 
-另外, unicode字符全部都是合法的标识符(包括各语言的标点符号). 比如`let 原神 = "启动"`是合法的, 你也可以`let 😩 = 9`.
+## `Str`
 
-## `const`
+Key中字符串(`Str`)有两种声明方式:
 
-你学过的`let`语法, 都可以直接套在`const`上. 另外, `const`支持`const( 变量名 )`的语法, 用来让一个变量变成常量. 
+1. Raw String
 
-事实上, "常量"本身只是个锁定的**标记**, 用于提醒自己这是不该更改的值. 作为脚本语言, 强制在底层区分可变和不可变是很麻烦且几乎没有正面收益的设计. 
+(我该叫它`质符串`么..)
 
-常量的本身, 属性和索引都无法被赋值(仅仅是定义在赋值行为上, 其实能够修改数据的方法还是可以继续调用的, 甚至`take`和`swap`都能对其生效. `take`和`swap`的作用参见<jmp to="/guide/4.nature">Key语言哲学</jmp>). 
-
-```
-let a = { // 定义一个对象(和万物皆对象的对象不一样, 之后会讲)
-  b: 2,
-  c: 3
-};
-a.b = 9; // a == {b: 9, c: 3}
-const(a);
-a.c = 20; // 报错: 不可写入常量
-```
-
-想要可写, 可以使用`let`语句指向该常量:
+使用双引号修饰的字符串所见即所得, 前提是你的代码编辑器必须使用`UTF-8`编码进行输入. 
 
 ```
-let b = a;
-b.c = 20; // 正常写入, a不受影响, b的属性被写入
+log("-\n\s\`\
+   233")
 ```
 
-当你想要转移常量数据的所有权时, 考虑`take`: 
+期望输出
 
 ```
-let b = take(a);
-b.c = 20;
-a == uninit; // 虽然a已经是常量, 但take对其依然有效
+-\n\s\`\
+   233
 ```
 
-以下将会开始说明各个基本类型的定义方式. 
+这种输入方式非常好用, 最大的缺点就是不能包含双引号. 需要输入双引号时请使用第二种.
 
-## 数字
+2. Escaper String
 
-Key中有3中数字类型: `Uint`(正整数), `Int`(可以带负号的整数), `Float`(浮点数). 
-
-为什么分3种? 
-1. `Uint`的长度是你操作系统指针的长度, 它可以当作指针的容器. 听不懂这些并不影响你学习Key语言.
-2. `Int`和`Int`进行除法时会直接得到`Int`类型(向0方向取整), 比js的除法舒服多了.
-3. `| & ^`这种二进制操作符只允许`Uint`使用, 会直观很多
-4. 肉眼可见的性能优势就不细说了.
-
-别担心, 这三种类型一般情况下可以直接进行运算, `int`和`float`运算会自动得到`float`结果, `uint`和`int`运算会自动得到运算符左侧的类型的结果.
-
-而且这三种数字都有三种属性可以调用, 分别是`int`,`float`,`uint`. 如果你想要你的函数只是接受一个数字, 不妨直接在函数体内直接获取数字的对应类型的属性. 我说的可能有些乱, 你可以看一下使用方法:
+转义字符串, 使用反引号` `` `修饰. 在转义字符串中可以使用反斜杠对字符串进行转义.
 
 ```
-( 1.1 ).uint == 1u
-2 .float == 2.0
-30u .int == 30
+`\删除换行符  \n换行符 \r回车 \t制表符 \\反斜杠 \0字节的0 \`反引号 \{左大括号`
 ```
 
-值得注意的是, 以上等号只是在说明他们类型相同. 实际上`1.0==1`也返回true (`int`和`float`运算自动同化成`float`进行对比)
-
-以下是数字的定义方法
-
 ```
-let n = 0u; // uint
-let n = -3i; // int
-let n = 10; // 不带后缀默认int
-let f = 2.5; // float
-let f = 2.5f; // float
-let f = 3f; // 相当于3.0, float
+let a = 5;
+let b = `ab\
+         c\r\n\\ \`{a*a}\0`
 ```
 
-`Int`, `Uint`, `Float`都分别有`parse`的静态方法, 而且支持选择进制
-
-比如:
+期待输出
 
 ```
-Int::parse("-2F", 16) == -47
+abc
+\ `25
 ```
 
-不过这里的字符串不是语法上的解析, 不要加f,i,u这种类型后缀.
-
-另外, 我做了一个好玩的特性: Uint可以使用索引获取第n个bit是1还是0 (从右往左). `uint[n]`等价于`(uint & (1<<n)) != 0`, 比如`8u[3] == true`
-
-## `Func`
-
-函数(`Func`)也用`let`定义
+你可以使用加号拼接字符串
 
 ```
-// 最常用的定义
-let f(a:Str,b) {
-  ...
-}
-// 定义空函数(分号是必须的, 否则会把下一句解析成其函数体)
-let f(a,b);
-// 定义直接返回的函数
-let f(): "好短好喜欢";
+let s = 6;
+"a" + s + "c" == "a6c"
 ```
 
-需要注意的是, `:`是一个语句,是`return`的缩写.在任何地方你都可以使用`:`开头的语句直接返回,效果和`return`一样.
+你也可以使用`push`方法修改字符串.
 
-以下写法是正确的
+字符串有2个常用属性: `len`和`byte_len`. 前者读取时会遍历一遍字符串, 可以获得精确的unicode字符数量; 后者直接读取字符串的内存长度. 这些属性不可修改.
 
-```
-let a() {
-  if true:30 else:60
-}
-```
+另外, 你也可以使用索引来获得字符串的第n个字符: `"原神启动"[1] == "神"`
 
-另外, Key的顶级作用域返回值时会直接返回为程序状态码:
+## 列表
 
-```
-// 顶级作用域
-:20
-// error: process didn't exit successfully: `...` (exit code: 20)
-```
+列表(`List`)是Key语言中的不定类型的储存类型.
 
-函数的字面量是`|参数|内容`. 以下写法等价
+列表使用方括号定义, 结尾可以有一个多余逗号, 但不可在任何槽位留空. 你或许需要用`()`代替空槽.
 
 ```
-let a(): 20;
-let a = ||: 20;
+let a = [1,(),[233,"455"],]; // [1,uninit,[233,"455"]]
+let a = List::from_iter(10); // [0,1,2,3,4,5,6,7,8,9]
 ```
 
-另外, 函数调用允许留空参数:
+列表最常用的方法是`push`和`remove`,详见[list api](../primitives/list.md). 
+
+列表也可以使用索引: `[1,2][1] == 2`
+
+列表有一个属性`len`, 只读, 可以获取其长度.
+
+## 数组
+
+数组(`Buf`)就是一片内存区域(`uint8_t[]`), 如果你确信它是一个正确的字符串, 可以使用`buf.as_utf8`直接转为`Str`.
+
+数组的声明使用单引号, 支持16进制输入和注释. 大括号内的将被解析为对应的byte, 大括号外的将被直接作为`utf8`编码(你可以使用`log('中文')`直接去看一个中文的utf8编码哦)
 
 ```
-let f(a,b,c,d,e) log(c);
-f(,,2,,); // 打印: 2
+let b = 'aacc{ / 使用大括号来换行和输入十六进制
+}ddee{
+  ff 00 33 dd / 大括号内注释只允许单行注释, 使用单斜杠开头
+  22334455
+}';
 ```
 
-## iife
+我为数组实现的方法超级多(肝痛), 有兴趣可以去读一读. 最重要的方法还是`read`, `read_float`和`write`.
 
-有的时候不想作用域污染, 你可以直接这样
+数组的索引得到的都是`Uint`类型. 
 
-```
-let b;
-{
-  let a = 99;
-  b = a;
-}
-```
+## 对象
 
-或者用`iife`的写法
+万物皆对象? nonono, Key语言的对象(`Obj`)就是个臭哈希表. 对象的定义和使用和js几乎一样.
 
 ```
-let b = ||{
-  let a = 99;
-  :a
-}();
+let o = {}; // 空对象
+let o = {
+  a:20, b:"好家伙"
+}; // 带元素的对象
+let o = Obj::from_list([
+  ["友人","A"],
+  ["结城","理"],
+  ["坂本","先生"]
+]); //通过列表解析对象
 ```
 
-## 参数类型
+读取`uninit`的任何属性并不会报错(直接返回`uninit`),所以不用怕`Obj`读空值,更不用考虑可选链这种东西.
 
-函数定义时可以在参数后加上`:类型`, 在调用时动态检查传入类型是否一致:
-
-```
-let a = "";
-let f(n:Uint);
-f(a) // err: 参数类型不同
-```
-
-此处的类型只允许字符, 不允许`some_mod-:T`的写法. 不论定义了什么类型, `uninit`都可以成功通过, 因此你的代码可能仍需要判断参数是否为`uninit`. 
-
-其实你还可以使用`=`来设定默认参数.
+也可以直接为`Obj`插入本没有的值
 
 ```
-let f(a:Int = 2) {
-  log(a)
-}
-f() // 2
+let o = {};
+o.a = 20;
+// o == {a:20}
 ```
 
-当然, 不加类型也能用`=`. 
+想`remove`也很简单:
 
 ```
-let f(a = "233") {
-  log(a)
-}
-f() // 233
+let o = {a:20,b}; // 不写`:`就代表uninit
+o.remove("b");
+// o == {a:20}
 ```
 
-## 宏
-
-Key语言有个别的脚本都没做过的功能, 就是改变函数作用域. 换句话说, 你的每个函数都可以当作一个宏来使用. 
-
-使用`call_here`:
+对象里有函数? 这样写:
 
 ```
-let a;
-let b;
-let initer;
-{ // 模拟作用域变化
-  let a = 99;
-  let b = 32;
-  let f() {
-    a = 20;
-    b = 10;
-  }
-  initer = f;
-}
-
-// 两种情况下的最外层的a,b值
-initer(); // a == (), b == ();
-initer.call_here(()) // 第一个参数代表函数内的self, 传个uninit就行
-                     // a == 20, b == 10
+let test() log("ok");
+let o = {f:test};
+(o.f)(); // ok
 ```
-
-改变作用域时如果函数带有默认参数, 由于函数的上下文变化, 默认参数的上下文也会跟着变化(如果你的默认参数写了变量之类的就会跟着变成现在的上下文的该变量)
-
-函数中的参数如果设定了自定义类型, 到了新作用域也会跟随新作用域的同名类型(没有同名类型就报错啦)
-
-其他方法请参见[`Func`方法](../primitives/func.md)
-
-## `Bool`
-
-Key语言使用`true`和`false`作为判断用的字面量. 你可以使用`rev`属性直接取反:
-
-```
-true.rev == !true == false
-```
-
-虽然没什么用, `bool`还有个`then`方法, 代表为`true`时运行函数体,并返回该函数的返回值. 
-
-```
-true.then(||:233) == 233;
-false.then(||:233) == ();
-```
-
-`()`是uninit的意思, 接下来会说.
-
-## `uninit`
-
-Key语言中有一个`null`的存在, 但它叫作`uninit`, 意思是未初始化的. 它的意思在中文中比`null`更直观, 使用起来比`null`更方便.
-
-`uninit`有三种声明方式
-
-```
-let a; // a == uninit
-let a = (); // a == uninit
-let a = uninit;
-```
-
-## 注释
-
-key中使用两种注释方法
-
-```
-// 单行注释
-/'
-  多行
-  注释
-'/
-```
-
-多行注释可以省略结尾的`'/`,代表直接注释到文件结束
 
 ## 结语
 
-下一篇会继续说Key语言中的剩下的基本类型的声明方式, 如果有点累了不如在此分界稍作休息.
+以上就是Key语言中可以直接定义的所有基本类型. 下一章会说明Key语言的哲学和设计(不是那种很难懂的, 恰恰相反, 我实现了比你已知的大部分编程语言还精致的语言架构), 想必会决定你对这门语言的好感. 
