feat: 滚动悬浮, about3d feat: native2篇文章

--- a/articles/guide/3.nature.md
+++ b/articles/guide/3.nature.md
@@ -96,6 +96,41 @@ Key语言使用 我称之为`outlive`的算法, 虽然没啥论文支持, 但这
 
 需要注意的是, 该算法虽然经历了我的大量测试, 但难免会有漏洞. 希望大家对于重复dealloc或者泄露问题积极提Issue. 
 
+知道了`take`和`swap`, 我说说`const`. 
+
+## `const`
+
+你学过的`let`语法, 都可以直接套在`const`上. 另外, `const`支持`const( 变量名 )`的语法, 用来让一个变量变成常量. 
+
+事实上, "常量"本身只是个锁定的**标记**, 用于提醒自己这是不该更改的值. 作为脚本语言, 强制在底层区分可变和不可变是很麻烦且几乎没有正面收益的设计. 
+
+常量的本身, 属性和索引都无法被赋值(仅仅是定义在赋值行为上, 其实能够修改数据的方法还是可以继续调用的, 甚至`take`和`swap`都能对其生效). 
+
+```
+let a = { // 定义一个对象(和万物皆对象的对象不一样, 之后会讲)
+  b: 2,
+  c: 3
+};
+a.b = 9; // a == {b: 9, c: 3}
+const(a);
+a.c = 20; // 报错: 不可写入常量
+```
+
+想要可写, 可以使用`let`语句指向该常量:
+
+```
+let b = a;
+b.c = 20; // 正常写入, a不受影响, b的属性被写入
+```
+
+当你想要转移常量数据的所有权时, 考虑`take`: 
+
+```
+let b = take(a);
+b.c = 20;
+a == uninit; // 虽然a已经是常量, 但take对其依然有效
+```
+
 ## 结语
 
 初学者来说这一篇读完你只需要记住赋值就是复制就好了, 传参数时 因为函数内会自动帮你 把参数名的变量(形参)定义成传的实际参数(实参), 这个过程也属于赋值, 所以也有复制的行为存在. 
