--- a/articles/native/1.start.md
+++ b/articles/native/1.start.md
@@ -47,6 +47,8 @@ mod d:\code\rust\keytest\target\debug\keytestlib.dll> my_mod;
 
 ## 报错
 
-需要注意的是, 希望用户使用`kpanic`替代`panic`, 因为`panic`在你的库中被调用时会在Key解释器中提示`某个线程错误`, 而`kpanic`就能正确打印错误信息和Key中的行号. 
+使用`key_native`时, 程序会自动使用Key语言的报错(将你的库的报错转达给Key解释器, 让其代为报错). 如果你想更改报错方式, 请使用[`std::panic::set_hook`](https://doc.rust-lang.org/std/panic/fn.set_hook.html). 
 
-如果我们用了一些库, 当然不可能强求库中所有代码都改用`kpanic`, 
+## 结语
+
+至此基本环境已经准备完成. 下一篇将会带你导出一个函数供Key使用. 
