fix: 削弱了about的眼睛角度 feat: 一篇unsafe class

--- a/articles/guide/7.if_for.md
+++ b/articles/guide/7.if_for.md
@@ -253,9 +253,26 @@ for n: A::{i:0} {
 }
 ```
 
-Key语言中有一个没有字面量定义的基本类型: `Sym`, 代表`Symbol`, 就是标志的意思.
+Key语言中有一个特别的类型: `Sym`, 代表`Symbol`, 就是标志的意思.
 
 目前`Sym`只有一个使用方法: 作为`@next`方法的结束标志. 通过调用`Sym::iter_end()`可以得到一个迭代结束的标志.
+
+## 另外
+
+你需要注意, 迭代器本身不应该被存为变量, 更**不应该活的比被迭代的值久**. 以下行为会招来灾厄: 
+
+```
+let iter;
+{
+  let a = "启动启动启动!";
+  iter = a.lines();
+}
+for l:iter {
+  log(l);
+}
+```
+
+运行没问题? 实际上只是巧合. 在`for`上一行时`a`就已经被回收了, 此时迭代的只是一片无主的内存罢了, 报不报错全看运气. 
 
 ## 结语
 
