--- a/articles/native/3.class.md
+++ b/articles/native/3.class.md
@@ -1,5 +1,9 @@
 # 声明和导出类
 
+原生模块可以让你优雅地写出Key语言可以无缝使用的*原生类型*(`Native Class`). 
+
+## 静态方法
+
 试着实现一个拥有一个静态函数的原生类: 
 
 ```rust
@@ -31,6 +35,8 @@ mod ...> m;
 let a = m-:A::new();
 log(a is m:A); // true
 ```
+
+## 实例方法
 
 我们把`create`的两个参数改一下, 并试着添加一个方法: 
 
@@ -65,8 +71,209 @@ mod ...> m;
 log(m-:A::new().look()); // 466
 ```
 
+## 属性
 
+Key原生类型提供`getter`和`setter`处理类上的属性. 
+
+试一试创建一个自定义属性的类: 
+
+```rust
+use key_native::prelude::*;
+
+static A:Class = Class::uninit();
+
+// match不能在=>前写复杂表达式
+// 所以在这里把哭脸的bytes定义好
+const EMOJI_ID:&'static [u8] = "🥲".as_bytes();
+
+// 我们定义一个getter函数, 接受实例和id
+fn my_getter(inst:&Instance, id:Ident)-> Litr {
+  // Ident底层是slice, 使用slice方法比str方法省性能
+  // 如果需要unicode可以用rust字符串的as_bytes方法对id进行匹配
+  match id.slice() {
+    // 如果找的是v属性就返回实例的v属性
+    // b前缀字符串就是&[u8]类型
+    b"v"=> Litr::Uint(inst.v),
+    // 如果用户传进来了这个哭脸就打回去
+    EMOJI_ID=> panic!("哭什么, 不许哭"),
+    // 如果不是分内的属性名就返回uninit
+    _=> Litr::Uninit
+  }
+}
+
+// 我们定义一个setter, 不要返回值
+// 比getter多了一个设置的值的参数, 且inst可写
+fn my_setter(inst:&mut Instance, id:Ident, val:Litr) {
+  // 处理val, 如果是uint就拿uint, 不是则缺省0
+  let val = if let Litr::Uint(n) = val {n}
+    else {0};
+  match id.slice() {
+    // 如果用户要设置v值, 就把实例的v直接设成传进来的val值
+    b"v"=> inst.v = val,
+    // 此处既可以报错也可以像现在这样什么也不干
+    _=> ()
+  }
+}
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  A.new("A");
+  m.export_cls(A.clone());
+  // 还是我们的233, 2
+  A.static_method("new", |_,_|A.create(233, 2));
+  // 使用getter方法为自己的类设置getter
+  A.getter(my_getter);
+  // setter同上
+  A.setter(my_setter);
+}
+```
+
+ks中, 咳, 我们先测试哭脸:
+
+```
+mod ...> m;
+let a = m-:A::new();
+log(a.🥲); // 报错: > 哭什么, 不许哭
+```
+
+在ks中再试一试setter和getter的协作: 
+
+```
+mod ...> m;
+let a = m-:A::new();
+log(a.v); // 233
+a.v = 99u; // 别忘了你只处理了Uint
+log(a.v); // 99
+```
+
+## 索引读写
+
+Key语言也提供了`[n]`的语法对应的原生类的处理方式. 和属性不同, 索引可以传入**任何**Key语言类型(不限于基本类型), 而属性你只能得到属性名. 
+
+```rust
+use key_native::prelude::*;
+
+static A:Class = Class::uninit();
+
+// 定义一个index getter, 此处的i是一个LitrRef
+fn i_get(_inst:&Instance, i:LitrRef)-> Litr {
+  // 要求用户读取索引时必须传入列表
+  // 别忘了LitrRef有个解引用功能, &*LitrRef就是&Litr
+  let ls = if let Litr::List(l) = &*i {
+    l
+  }else {
+    panic!("老娘的索引只能用列表来读!")
+  };
+  // 打印索引
+  println!("get:{ls:?}");
+  // 返回个uninit敷衍一下
+  Litr::Uninit
+}
+
+// 定义一个index setter, 类比setter对getter
+fn i_set(_inst:&mut Instance, i:LitrRef, val:Litr) {
+  // 老规矩
+  let ls = if let Litr::List(ls) = &*i {
+    ls
+  }else {
+    panic!("老娘的索引只能用列表来写!")
+  };
+  // 打印索引和本要设置的值
+  println!("set:{ls:?} to {val:?}")
+}
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  A.new("A");
+  m.export_cls(A.clone());
+  A.static_method("new", |_,_|A.create(0,0));
+  // 使用index_get方法设置index getter
+  A.index_get(i_get);
+  // setter同上
+  A.index_set(i_set);
+}
+```
+
+ks中试一试用列表传索引:
+
+```
+mod ...> m;
+let a = m-:A::new();
+let _ = a[["11", "45"]]; // 读取a的索引
+a[["14", "19", "19"]] = "810"; // 写入a的索引
+
+/' 打印出:
+get:[Str("11"), Str("45")]
+set:[Str("14"), Str("19"), Str("19")] to Str("810")
+```
+
+## `to_str`
+
+设置`to_str`可以改变自己在`log`和`Str::from`中的表现哦. 
+
+```rust
+use key_native::prelude::*;
+
+static A:Class = Class::uninit();
+
+// 只有一个&Instance参数
+fn to_str(inst:&Instance)-> String {
+  format!("My Style! {}", inst.v + inst.w)
+}
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  A.new("A");
+  m.export_cls(A.clone());
+  // 两位数就选114和514吧
+  A.static_method("new", |_,_|A.create(114, 514));
+  // 把上面的to_str传进class的to_str方法里
+  A.to_str(to_str)
+}
+```
+
+在ks里`log`一下: 
+
+```
+mod ...> m;
+let a = m-:A::new();
+log(a); // My Style! 628
+```
+
+## 是否导出
+
+我想你偶尔在考虑: 如果我的类不导出会怎样? 答案是: 除了用户无法直接通过`m-:`访问以外, 毫无影响! 
+
+试一试通过一个函数直接创建一个私有类, 并直接使用私有类的方法: 
+
+```rust
+use key_native::prelude::*;
+
+static A:Class = Class::uninit();
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  // 我们就只设置A的方法, 不导出它
+  A.new("A");
+  A.method("test", |_,_,_|{
+    println!("私有类型的方法成功调用了");
+    Litr::Uninit
+  });
+  
+  // 通过一个叫new的公共函数创建它
+  m.export_fn("new", |_,_|A.create(0, 0));
+}
+```
+
+在ks里试一试:
+
+```
+mod ...> m;
+// 直接调用模块上的公共函数
+let a = m-.new();
+a.test(); // 打印: 私有类型的方法成功调用了
+```
 
 ## 结语
 
-你在声明要导出的函数时可以看到`cx:Scope`的参数. 它代表了调用该函数时, 脚本所处的作用域. 下一篇我会讲到`Scope`的使用. 
+为什么原生类型实例就给了两个`usize`的槽? 怎么可能够用? 下一篇`unsafe`的使用会彻底揭晓该问题的答案. 没学过`unsafe`系列也不要紧, 因为我已经将难以理解和麻烦的部分包装成了通用方法, 你需要注意的只是那些方法上的提示语. 
