feat: 语法高亮 feat: 一篇scope文章

--- a/articles/native/4.class.md
+++ b/articles/native/4.class.md
@@ -35,7 +35,7 @@ fn main(m: &mut NativeModule) {
   // 定义一个实例方法用来打印你的值
   A.method("look", |inst,_,_|{
     // 使用read方法将inst.v值读取为该类型引用
-    // inst.w
+    // inst.w可以用readw方法
     let map:&mut MyMap = inst.read();
     // 打印map
     println!("{map:?}");
@@ -49,7 +49,7 @@ fn main(m: &mut NativeModule) {
 
 ks里试一下:
 
-```
+```ks
 mod ..> m;
 let a = m-:A::new();
 a.look(); // 打印: {2: "test"}
@@ -130,7 +130,7 @@ fn main(m: &mut NativeModule) {
 
 在ks中模拟一下:
 
-```
+```ks
 mod ...> m;
 let a = m-:A::new(); // 创建了哈希表1号!
 { // 块内的值生命周期只延续到块结束
@@ -204,7 +204,7 @@ fn main(m: &mut NativeModule) {
 
 ks里迭代下看看:
 
-```
+```ks
 mod ...> m;
 
 let a = m-:A::new();
@@ -220,8 +220,6 @@ for num: a.iter() {
 ```
 
 当你正确为此定义`ondrop`后, 迭代器本身的生命周期应当比被迭代的值短. 不过这点是提醒在用户层面了, 总不能为了迭代器安全给脚本弄个生命周期检查. 
-
-有兴趣的话, 读一下<jmp to="/native/n.rc">引用计数版哈希表</jmp>吧, 或许可以帮你加深对原生类型使用上的理解. 
 
 ## 结语
 
