--- a/articles/native/5.scope.md
+++ b/articles/native/5.scope.md
@@ -34,7 +34,7 @@ fn main(m: &mut NativeModule) {
 
 让我们试试`lock`一个不存在的`ohno`变量: 
 
-```
+```ks
 mod ...> m;
 m-.lock("ohno");
 ```
@@ -48,7 +48,7 @@ m-.lock("ohno");
 
 看看`lock`成功的效果: 
 
-```
+```ks
 let ohno = 20;
 m-.lock("ohno"); // 打印:找到ohno变量:Int(20)
 ohno = 30; // 报错:'ohno'已被锁定
@@ -60,8 +60,189 @@ ohno = 30; // 报错:'ohno'已被锁定
 
 `let_var`我认为最实用的场景莫过于`prelude`行为, 为一个作用域自动生成一系列函数, 变量或类供用户使用. 
 
+```rust
+use key_native::prelude::*;
+
+// 我们的自定义类型
+static A:Class = Class::uninit();
+
+// 有的时候嫌写参数类型麻烦, 就写个type好了
+type Args = Vec<LitrRef>;
+// 定义一个普通函数prelude
+fn prelude(_:Args, cx:Scope)-> Litr {
+  // 使用let_var在此作用域定义一个僕的变量
+  cx.let_var("僕", Litr::Str("ヤバ".to_string()));
+  // 使用using为此作用域定义一个类型
+  // 相当于class A = m-:A的语法, 但即使该类未导出也能using
+  // 此处传入的名字才是真正using的名字, 和初始化的名字无关
+  cx.using("A", A.clone());
+  // 使用get_parent查找其父作用域
+  // 如果该作用域有父作用域的话就会运行if内容
+  if let Some(parent_scope) = cx.get_parent() {
+    // 在父作用域创建一个parent变量
+    parent_scope.let_var("parent", Litr::Int(233));
+  }
+  
+  // 返回个uninit
+  Litr::Uninit
+}
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  // 初始化A类型, 无需导出
+  A.new("A");
+  // 弄个A::new作测试
+  A.static_method("new", |_,_|A.create(0, 0));
+  // 导出prelude函数
+  m.export_fn("prelude", prelude);
+}
 ```
 
+去ks里试试prelude的影响: 
+
+```ks
+mod ...> m;
+{// 故意留个父作用域
+  // 使用prelude
+  m-.prelude();
+  // 看看自动定义的变量
+  log(僕, parent); // ヤバ 233
+  // 试一下自动using
+  log(A::new()); // A { Native }
+}
+
+// 看看父作用域是否受影响
+log(parent); // 233
 ```
 
-// todo: wait_for_me()让主线程等待执行完毕
+我提倡Key原生模块定义`prelude`函数进行上下文的初始化. 
+
+## 函数和事件
+
+请注意, Key语言不仅是默认单线程, 而且不提供事件循环! 取而代之的是, `wait_inc`函数用来等待你的事件运行结束再结束主线程. 换句话说, 你可以选择自己的事件循环框架甚至自己实现一个事件循环系统. 
+
+试着实现一个`set_timeout`: 
+
+```rust
+use key_native::{
+  prelude::*,
+  // use一下Function
+  key::Function,
+  // use一下主线程阻塞器
+  wait_inc, wait_dec
+};
+use std::thread;
+
+// 还是那个味(参数和返回值老样子)
+fn set_timeout(args:Vec<LitrRef>, _cx:Scope)-> Litr {
+  // 要求第一个参数是Func
+  let func = get_arg!(args[0]:Func);
+  // 要求函数必须是本地函数, 不是原生函数
+  let func = match func {
+    // 调用clone拿到值的所有权(因为要送到别的线程, 引用会失效的)
+    // 而且本地函数的clone会自动保证你持有的函数的作用域不会过期
+    Function::Local(f)=> f.clone(),
+    _=> panic!("必须传入本地函数. 原生函数请用`||f()`的语法包裹")
+  };
+  // 允许传第二个整数参数作为时长, 但可以缺省为0
+  let timeout = get_arg!(args[1]:Int?0);
+  // 告诉主线程需要阻塞一下主线程等这里的线程跑完
+  wait_inc();
+  // 创建一个新线程等待这个时间
+  // 仅供示例, 实际情况你不应该每次都创建一个新线程
+  thread::spawn(move||{
+    // 将时间当作毫秒数睡眠
+    let dur = std::time::Duration::from_millis(timeout);
+    thread::sleep(dur);
+    // 不传参数直接调用
+    func.call(Vec::new());
+    // 告诉主线程我们不需要等下去了
+    // 该函数调用次数应当和wait_inc相同,否则主线程将永远阻塞
+    wait_dec();
+  });
+  Litr::Uninit
+}
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  // 导出函数
+  m.export_fn("set_timeout", set_timeout);
+}
+```
+
+在ks里试试:
+
+```ks
+mod ...> m;
+m-.set_timeout(||{
+  log("5秒之后, 你不属于我")
+}, 5000); // 5秒后打印: 5秒之后, 你不属于我
+```
+
+## `call_at`
+
+都说到作用域了, 就说一说`call_at`的使用. `call_at`中可以传入作用域, 也就是说你也可以在原生函数中使用`call_here`般的方法: 
+
+```rust
+use key_native::{
+  prelude::*,
+  key::Function,
+  wait_inc, wait_dec,
+  // 还要use outlive的两位
+  outlive_inc, outlive_dec
+};
+use std::thread;
+
+// 就叫set_timeout_here好了
+fn set_timeout_here(args:Vec<LitrRef>, here:Scope)-> Litr {
+  // .. 和上文实现相同
+  let func = get_arg!(args[0]:Func);
+  let func = match func {
+    Function::Local(f)=> f.clone(),
+    _=> panic!("必须传入本地函数")
+  };
+  let timeout = get_arg!(args[1]:Int?0);
+  wait_inc();
+
+  // 由于我们要保证"here"的作用域不过期
+  // 使用outlive_inc来增加该作用域的引用计数
+  outlive_inc(here);
+
+  thread::spawn(move||{
+    thread::sleep(std::time::Duration::from_millis(timeout));
+    // 我们试着使用call_at
+    // 依次传入作用域, 函数上下文的self和调用参数
+    // 使用scope.get_self()方法获得该作用域的self
+    // 如果想用函数定义处的作用域, 也可以使用func.scope()得到
+    func.call_at(here, here.get_self(), Vec::new());
+    wait_dec();
+    // 我们作用域使用完了, 手动将作用域的引用计数-1
+    // outlive_dec(here);
+  });
+  Litr::Uninit
+}
+
+#[no_mangle]
+fn main(m: &mut NativeModule) {
+  // 导出函数(这次是here版)
+  m.export_fn("set_timeout_here", set_timeout_here);
+}
+```
+
+ks里模拟一下:
+
+```ks
+mod ...> m;
+// 我们故意在有a的作用域外定义函数
+let f() {
+  a += 2;
+  log(a); // 5
+}
+
+{
+  let a = 3;
+  m-.set_timeout_here(f, 2000);
+  
+} // 由于outlive_inc的使用
+  // 该作用域并未在此处直接释放
+```
