--- a/articles/native/2.func.md
+++ b/articles/native/2.func.md
@@ -10,7 +10,7 @@ use key_native::prelude::*;
 // Scope是调用咱函数的作用域, 之后再说
 fn print_arg(args:Vec<LitrRef>, _cx:Scope)-> Litr {
   // 使用get_arg宏来获取第n个函数, 之后会专门说
-  let a = get_arg!("print_arg" args[0]);
+  let a = get_arg!(args[0]);
   // 将得到的值打印出来
   println!("{:?}", a);
   // 最后一句不加分号, 代表返回uninit, 相当于无返回值
@@ -26,7 +26,7 @@ fn main(m: &mut NativeModule) {
 
 在ks中写(将`xxx`代入你的dll路径):
 
-```
+```ks
 mod xxx.dll> m;
 m-.print_arg("芙卡洛斯")
 ```
@@ -44,36 +44,33 @@ key xxx.ks
 
 `get_arg`是我为了减少用户的参数判断代码而设计的宏, 使用方法是: 
 
-```
+```rust
 // 得到第n个参数的Litr引用(不存在直接报错)
-get_arg!("func_name" args[n]);
 get_arg!(args[n]);
 
 // 得到第n个参数, 并判断其类型, 直接返回其类型的Rust值
 // 如果没有第n个参数, 或类型不正确则直接报错
-get_arg!("func_name" args[n]:Type);
 get_arg!(args[n]:Type);
+
+// 得到第n个参数, 如果没传或者类型不对就使用默认值
+get_arg!(args[n]:Type?default);
 ```
 
 上文中个参数的含义: 
 
 |参数|含义|
 |---|---|
-|`"func_name"`|函数名, 用于报错提醒函数名. 缺省为"该函数"|
 |`args`|你函数得到的`Vec<LitrRef>`的参数名字|
 |`n`|你要读取第n个参数|
 |`Type`|你需要该参数为什么类型(基本类型, Key本地类的实例是`Inst`, Key原生类的实例是`Ninst`)|
+|`default`|默认值|
 
 `get_arg!`只是`match`语法的缩写, 如果需要更细致的控制流程, 尝试这样写: 
 
 ```rust
-// 作对比句, 
-// 该写法在没有第一个参数或第一个参数不为Bool时直接报错
-// 此写法在ks传参正确时直接得到rust的bool类型
-let a = get_arg!(args[0]:Bool);
+// 作对比句
+let a = get_arg!(args[0]:Bool?false);
 
-// 你想缺省第一个参数, 只是想告诉用户可以传true 
-// 但可以缺省false, 就需要手动写match
 // map_or可以传入第一个参数代表`get(0)`为空时的情况
 // map_or第二个参数代表有Some的时候将要怎么处理(我将其命名为n)
 let a = args.get(0).map_or(false, |n|{
@@ -125,7 +122,7 @@ fn main(m: &mut NativeModule) {
 
 这样写的话几个参数需要`&mut`都不会引起可变引用的冲突. 在Key中这样写:
 
-```
+```ks
 mod xx.dll> m;
 
 let bool = false;
@@ -148,7 +145,7 @@ fn swap(mut args:Vec<LitrRef>, _c:Scope)-> Litr {
 
 在ks中试一下:
 
-```
+```ks
 mod ..> m;
 
 let t = true;
