feat: 右侧栏 feat: 基本类型方法list

--- a/articles/guide/2.declare.md
+++ b/articles/guide/2.declare.md
@@ -4,7 +4,7 @@ Key语言中还有字符串(`Str`), 列表(`List`), 数组(真的是数字的组
 
 本篇中有一些新定义的行为(其他脚本语言没有做过的事情), 希望初学者不要畏惧.
 
-## `Str`
+## Str
 
 Key中字符串(`Str`)有两种声明方式:
 
