--- a/articles/guide/3.nature.md
+++ b/articles/guide/3.nature.md
@@ -98,7 +98,7 @@ Key语言使用 我称之为`outlive`的算法, 虽然没啥论文支持, 但这
 
 知道了`take`和`swap`, 我说说`const`. 
 
-## `const`
+## const
 
 你学过的`let`语法, 都可以直接套在`const`上. 另外, `const`支持`const( 变量名 )`的语法, 用来让一个变量变成常量. 
 
