--- a/articles/guide/4.class.md
+++ b/articles/guide/4.class.md
@@ -102,6 +102,8 @@ let test_obj = {a:233};
 log(A::get.call(test_obj)) // 233
 ```
 
+通过`::`访问实例方法的行为仅限本地类型, 原生类型和基本类型不可用. 
+
 ## is
 
 Key语言使用`is`运算符来判断类型. 
