feat: 帅 手机端 帅 feat: native一篇planet

--- a/articles/guide/8.async.md
+++ b/articles/guide/8.async.md
@@ -45,6 +45,8 @@ log(fallen);
 log("end");
 ```
 
+## fall的时机
+
 使用`Planet`并行处理两件事: 
 
 ```ks
@@ -85,4 +87,17 @@ let a3 = Planet::new(|caller|{
 log(a3.fall()); // 再隔了3秒才打印333
 ```
 
-我讲述的这些便是已有的全部异步API. 对于`Planet::all`和`Planet::any`之类的回调性质强的方法, 由于`Planet`只提供`fall`去"我等你", 而不提供`then`这种"你等我"这种的设计, 因此不予实现. 
+## Planet::all
+
+由于`Planet`只提供`fall`去"我等你", 而不提供`then`这种"你等我"的设计, 因此Key语言并没有将`Planet`并发转换为单个`Planet`的方法. 但Key提供了一个`Planet::all`函数用来同时降落所有`planet`并返回其结果的列表. 
+
+```ks
+log(Planet::all(
+  Planet::new(|caller|{
+    set_timeout(||caller.ok("222"), 2000)
+  }), // 不要在此处调用fall
+  Planet::new(|caller|{
+    set_timeout(||caller.ok("333"), 3000)
+  })
+)); // 3秒后打印[222, 333]
+```
