--- a/articles/guide/8.async.md
+++ b/articles/guide/8.async.md
@@ -4,7 +4,7 @@ Key语言使用行星(`Planet`)来将异步函数(需要使用回调函数才能
 
 之所以是`Planet`和`fall`, 是因为`Plan`作为计划, 一开始是对标Javascript中的`Promise`. 但事实上行星和`Promise`使用方式差距甚远. 行星会坠落`Fall`阻塞主线程, 而用户得到坠落的行星中的值, 便可继续前进. 
 
-Key语言的标准库尚不完善, 因此以下示例在标准库完成之前或许咱不可用. 如果你较为熟络`Rust`或`C`系列, 希望你能移步`开发`-`异步`进行实际程序的操作和尝试. 
+Key语言的标准库尚不完善, 因此以下示例在标准库完成之前或许咱不可用. 如果你较为熟络`Rust`或`C`系列, 希望你能移步<jmp to="/native/6.planet">使用`Planet`</jmp>进行实际程序的操作和尝试. 
 
 本文章目前仅作为参考, 并作为对Key语言标准的补充. 
 
