--- a/articles/native/6.planet.md
+++ b/articles/native/6.planet.md
@@ -45,7 +45,7 @@ fn main(m: &mut NativeModule) {
 ks中来`fall`一下: 
 
 ```ks
-mod D:\code\rs\tst\target\debug\tstlib.dll> m;
+mod ...> m;
 let delay = m-.async_delay;
 
 // 未使用fall, 因此不会阻塞
