--- a/articles/guide/1.declare.md
+++ b/articles/guide/1.declare.md
@@ -18,7 +18,7 @@ Key中有3中数字类型: `Uint`(正整数), `Int`(可以带负号的整数), `
 3. `| & ^`这种二进制操作符只允许`Uint`使用, 会直观很多
 4. 肉眼可见的性能优势就不细说了.
 
-别担心, 这三种类型一般情况下可以直接进行运算, `int`和`float`运算会自动得到`float`结果, `uint`和`int`运算会自动得到运算符左侧的类型的结果.
+别担心, 这三种类型一般情况下可以直接进行运算, `int`或`uint`和`float`运算会自动得到`float`结果, `uint`和`int`运算会自动得到运算符左侧的类型的结果.
 
 而且这三种数字都有三种属性可以调用, 分别是`int`,`float`,`uint`. 如果你想要你的函数只是接受一个数字, 不妨直接在函数体内直接获取数字的对应类型的属性. 我说的可能有些乱, 你可以看一下使用方法:
 
