feat: prim三篇 fix: 杀!clone版本方法!

--- a/articles/guide/1.declare.md
+++ b/articles/guide/1.declare.md
@@ -4,7 +4,9 @@
 
 别忘了你可以使用`~`命名, 像是:`never~gonna~give~you-up`, 可读性还不错, 也可以把它当个前缀标识一种类型的变量. 
 
-另外, unicode字符全部都是合法的标识符(包括各语言的标点符号). 比如`let 原神 = "启动"`是合法的, 你也可以`let 😩 = 9`.
+另外, unicode字符全部都是合法的标识符(包括各语言的标点符号). 比如`let 原神 = "启动"`是合法的, 你也可以`let 😩 = 9`. 
+
+需要提醒: Key语言中可以随便省略分号, 分号本身就只代表一个空语句. 换句话说, 分号仅仅是为了分割语句和当作空语句而存在的分隔符, 不像其他语言一样把分号当作语法来解析. 
 
 以下将会开始说明各个基本类型的定义方式. 
 
@@ -41,7 +43,7 @@ let f = 2.5f; // float
 let f = 3f; // 相当于3.0, float
 ```
 
-`Int`, `Uint`, `Float`都分别有`parse`的静态方法, 而且支持选择进制
+`Int`, `Uint`, `Float`都分别有`parse`的静态方法, 而且整数支持选择进制. 
 
 比如:
 
