--- a/articles/guide/2.declare.md
+++ b/articles/guide/2.declare.md
@@ -1,6 +1,6 @@
 # 基本类型
 
-Key语言中还有字符串(`Str`), 列表(`List`), 数组(真的是数字的组合, 叫作`Buf`), 对象(就是个哈希表,叫`Obj`). 
+Key语言中还有字符串(`Str`), 列表(`List`), 数组(真的是数字的组合, 叫作`Buf`), 哈希表(`Obj`). 
 
 本篇中有一些新定义的行为(其他脚本语言没有做过的事情), 希望初学者不要畏惧.
 
@@ -66,18 +66,20 @@ let s = 6;
 
 列表(`List`)是Key语言中的不定类型的储存类型.
 
-列表使用方括号定义, 结尾可以有一个多余逗号, 但不可在任何槽位留空. 你或许需要用`()`代替空槽.
+列表使用方括号定义, 结尾可以有一个多余逗号, 但不可在任何槽位留空. 你或许需要用`()`代替空槽. 
+
+有趣的是, 在Key语言中你可以省略元素之间的逗号, 不过可能带来的歧义和可读性问题请自行权衡. 
 
 ```ks
 let a = [1,(),[233,"455"],]; // [1,uninit,[233,"455"]]
 let a = List::from_iter(10); // [0,1,2,3,4,5,6,7,8,9]
 ```
 
-列表最常用的方法是`push`和`remove`,详见[list api](../primitives/list.md). 
+列表最常用的方法是`push`和`remove`,详见<jmp to="/prim/list">list api</jmp>. 
 
 列表也可以使用索引: `[1,2][1] == 2`
 
-列表有一个属性`len`, 只读, 可以获取其长度.
+列表有一个属性`len`, 只读, 可以获取其长度. 
 
 ## 数组
 
@@ -97,20 +99,24 @@ let b = 'aacc{ / 使用大括号来换行和输入十六进制
 
 数组的索引得到的都是`Uint`类型. 
 
-## 对象
+## 哈希表
 
-万物皆对象? nonono, Key语言的对象(`Obj`)就是个臭哈希表. 对象的定义和使用和js几乎一样.
+Key语言拥有一个哈希表的基本类型. 虽然它的类型名叫作`Obj`, 但为了减少混淆还请叫它`哈希表`. 哈希表的定义和使用和js几乎一样. 
+
+不同的是, Key语言中你可以省略元素之间的逗号. 不过可能带来的歧义和可读性问题请自行权衡. 
 
 ```ks
-let o = {}; // 空对象
+let o = {}; // 空哈希表
+
 let o = {
   a:20, b:"好家伙"
-}; // 带元素的对象
+}; // 带元素的哈希表
+
 let o = Obj::from_list([
-  ["友人","A"],
-  ["结城","理"],
+  ["友人","A"]
+  ["结城","理"]
   ["坂本","先生"]
-]); //通过列表解析对象
+]); //通过列表解析哈希表
 ```
 
 读取`uninit`的任何属性并不会报错(直接返回`uninit`),所以不用怕`Obj`读空值,更不用考虑可选链这种东西.
@@ -131,7 +137,7 @@ o.remove("b");
 // o == {a:20}
 ```
 
-对象里有函数? 这样写:
+哈希表里有函数? 这样写:
 
 ```ks
 let test() log("ok");
