--- a/articles/guide/4.class.md
+++ b/articles/guide/4.class.md
@@ -93,7 +93,7 @@ class A {
 A::{} // 不会报错, 此时a,b,c都是uninit
 ```
 
-之所以需要`A::{}`而不是`A {}`是因为Key语言并不强制分号, 第一行末尾是变量且第二行开头是`{`就会直接被解析成对象也是很不合理的. 
+之所以需要`A::{}`而不是`A {}`是因为Key语言并不强制分号, 第一行末尾是变量且第二行开头是`{`就会直接被解析成哈希表也是很不合理的. 
 
 值得注意的是, 实例方法也能通过`::`访问(和静态方法的命名不冲突, 静态方法优先), 此时你可以使用函数的`call`方法为此次调用绑定`self`(该绑定也会给予函数对这个值的写入权力). 如果不绑定`self`, 该函数就可能读写这个模块的`self`.
 
