--- a/articles/guide/1.declare.md
+++ b/articles/guide/1.declare.md
@@ -53,7 +53,20 @@ Int::parse("-2F", 16) == -47
 
 不过这里的字符串不是语法上的解析, 不要加f,i,u这种类型后缀.
 
-另外, 我做了一个好玩的特性: Uint可以使用索引获取第n个bit是1还是0 (从右往左). `uint[n]`等价于`(uint & (1<<n)) != 0`, 比如`8u[3] == true`
+另外, 我做了一个好玩的特性(不作为Key语言标准): Uint可以使用索引获取第n个bit是1还是0 (从右往左). `uint[n]`等价于`(uint & (1<<n)) != 0`, 比如`8u[3] == true`
+
+事实上, 你还可以使用`0x`和`0b`开头, 写一段16进制和2进制的数字. 16进制数字不区分大小写. 
+
+`0x`和`0b`的数字字面量均为`Uint`, 不可使用数字后缀. 
+
+```ks
+log(
+  0xFFFFFFFFFFFFFFFF
+  == Uint::max()
+); // true
+
+log(0b10101010); // 170
+```
 
 ## Func
 
