feat: 重写了一半文章

--- a/articles/guide/4.collect.md
+++ b/articles/guide/4.collect.md
@@ -230,7 +230,7 @@ let b = {a:0.2,b:2u};
 log(a==b);
 ``` 
 
-细致使用请参见<jmp to="/prim/buf">数组`Buf`</jmp>
+细致使用请参见<jmp to="/prim/obj">哈希表`Obj`</jmp>
 
 ## 结语
 
@@ -238,7 +238,9 @@ log(a==b);
 
 虽然只说明了基本定义和声明方式, 但如果你学过任何一门完整的编程语言, 你可能会在`细致使用`中发现很多熟悉的身影, 希望你能多些耐心发现自己需要的那一份, 或者大胆指出Key语言亟需改进的地方. 
 
-下一篇: <jmp to="/guide/5.func">函数</jmp>
+我们只讲了这些集合的定义方法, 如何去遍历它们呢? 
+
+下一篇: <jmp to="/guide/5.for">`if`和`for`</jmp>
 
 ## 参考
 
