--- a/articles/guide/4.collect.md
+++ b/articles/guide/4.collect.md
@@ -81,6 +81,18 @@ let b = [2u, 4.0, 6];
 log(a==b);
 ```
 
+### 解构赋值
+
+解构时如果左侧元素数量大于右侧, 则多出的元素被赋为`uninit`. 
+
+```ks
+let [a,b,c] < [2,4];
+// Int(4), uninit
+debug(b, c);
+```
+
+左侧元素少于右侧则会忽略右侧多出的部分. 
+
 细致使用请参见<jmp to="/prim/list">列表`List`</jmp>
 
 ## 使用数组
@@ -150,6 +162,18 @@ let b = '{22 45 00}';
 // 因此为true
 log(a<b);
 ```
+
+### 解构赋值
+
+解构时如果左侧元素数量大于右侧, 则多出的元素被赋为`uninit`. 
+
+```ks
+let [a,b] < '{23}';
+// Uint(35), uninit
+debug(a, b);
+```
+
+左侧元素少于右侧则会忽略右侧多出的部分. 
 
 细致使用请参见<jmp to="/prim/buf">数组`Buf`</jmp>
 
@@ -229,6 +253,29 @@ let b = {a:0.2,b:2u};
 // 因此打印: true
 log(a==b);
 ``` 
+
+### 解构赋值
+
+哈希表使用`{}`来解构. 使用不存在的属性名时会直接报错. 
+
+`{}`中的元素间的`,`可省略. 
+
+```ks
+let {a, b} < {a:3, b:6};
+// 3 6
+log(a, b);
+```
+
+但也可以只解构一部分元素, 剩下元素的可以省略. 
+
+```ks
+// 只解构一部分元素也可以
+let {a} < {a:3, b:6};
+// 3
+log(a);
+// 报错: 哈希表中没有c属性
+let {c} < {a:3};
+```
 
 细致使用请参见<jmp to="/prim/obj">哈希表`Obj`</jmp>
 
