--- a/articles/guide/6.func.md
+++ b/articles/guide/6.func.md
@@ -230,8 +230,6 @@ log(!false);
 log(!true == false);
 ```
 
-其他方法请参见<jmp to="/prim/func">`Func`方法</jmp>
-
 ## 管道操作符
 
 函数自然离不开嵌套. 
@@ -277,13 +275,15 @@ a+b |> () // ()是uninit, 意思是不做任何事情
 }
 ```
 
+其他方法请参见<jmp to="/prim/func">`Func`方法</jmp>
+
 ## 结语
 
 函数难么? 写起来不难. 真不难么? 一开始阅读别人的函数就开始头疼了. 
 
 事实确实如此, 函数只是一个功能, 一个语句的平台. 只有经验才是真本事. 
 
-下一篇: 
+Key语言可以定义一个类型, 请看下一篇: <jmp to="/guide/7.class">类声明</jmp>
 
 ## 参考
 
